kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  type: LoadBalancer
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
      name: plaintext
    - port: 9093
      targetPort: 9093
      protocol: TCP
      name: external
    - port: 9095
      targetPort: 9095
      protocol: TCP
      name: sasl-plaintext
  selector:
    app: kafka
